driver: Allow self-attaching in subprocesses